--- a/survey-freecodecamp-project/survey1.html
+++ b/survey-freecodecamp-project/survey1.html
@@ -1,7 +1,8 @@
 <html>
-<head>
-<link rel="stylesheet" href="style1.css"></head>
-<body>
+  <head>
+    <link rel="stylesheet" href="style1.css" />
+  </head>
+  <body>
     <div class="container">
       <header class="header">
         <h1 id="title" class="text-center">freeCodeCamp Survey Form</h1>
@@ -12,20 +13,46 @@
       <form id="survey-form">
         <div class="form-group">
           <label id="name-label" for="name">Name</label>
-          <input type="text" name="name" id="name" class="form-control" placeholder="Enter your name" required="">
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class="form-control"
+            placeholder="Enter your name"
+            required=""
+          />
         </div>
         <div class="form-group">
           <label id="email-label" for="email">Email</label>
-          <input type="email" name="email" id="email" class="form-control" placeholder="Enter your Email" required="">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form-control"
+            placeholder="Enter your Email"
+            required=""
+          />
         </div>
         <div class="form-group">
-          <label id="number-label" for="number">Age<span class="clue">(optional)</span></label>
-          <input type="number" name="age" id="number" min="10" max="99" class="form-control" placeholder="Age">
+          <label id="number-label" for="number"
+            >Age<span class="clue">(optional)</span></label
+          >
+          <input
+            type="number"
+            name="age"
+            id="number"
+            min="10"
+            max="99"
+            class="form-control"
+            placeholder="Age"
+          />
         </div>
         <div class="form-group">
           <p>Which option best describes your current role?</p>
           <select id="dropdown" name="role" class="form-control" required="">
-            <option disabled="" selected="" value="">Select current role</option>
+            <option disabled="" selected="" value="">
+              Select current role
+            </option>
             <option value="student">Student</option>
             <option value="job">Full Time Job</option>
             <option value="learner">Full Time Learner</option>
@@ -37,16 +64,41 @@
         <div class="form-group">
           <p>Would you recommend freeCodeCamp to a friend?</p>
           <label>
-            <input name="user-recommend" value="definitely" type="radio" class="input-radio" checked="">Definitely</label>
+            <input
+              name="user-recommend"
+              value="definitely"
+              type="radio"
+              class="input-radio"
+              checked=""
+            />Definitely</label
+          >
           <label>
-            <input name="user-recommend" value="maybe" type="radio" class="input-radio">Maybe</label>
+            <input
+              name="user-recommend"
+              value="maybe"
+              type="radio"
+              class="input-radio"
+            />Maybe</label
+          >
 
-          <label><input name="user-recommend" value="not-sure" type="radio" class="input-radio">Not sure</label>
+          <label
+            ><input
+              name="user-recommend"
+              value="not-sure"
+              type="radio"
+              class="input-radio"
+            />Not sure</label
+          >
         </div>
 
         <div class="form-group">
           <p>What is your favorite feature of freeCodeCamp?</p>
-          <select id="most-like" name="mostLike" class="form-control" required="">
+          <select
+            id="most-like"
+            name="mostLike"
+            class="form-control"
+            required=""
+          >
             <option disabled="" selected="" value="">Select an option</option>
             <option value="challenges">Challenges</option>
             <option value="projects">Projects</option>
@@ -61,23 +113,104 @@
             <span class="clue">(Check all that apply)</span>
           </p>
 
-          <label><input name="prefer" value="front-end-projects" type="checkbox" class="input-checkbox">Front-end Projects</label>
+          <label
+            ><input
+              name="prefer"
+              value="front-end-projects"
+              type="checkbox"
+              class="input-checkbox"
+            />Front-end Projects</label
+          >
           <label>
-            <input name="prefer" value="back-end-projects" type="checkbox" class="input-checkbox">Back-end Projects</label>
-          <label><input name="prefer" value="data-visualization" type="checkbox" class="input-checkbox">Data Visualization</label>
-          <label><input name="prefer" value="challenges" type="checkbox" class="input-checkbox">Challenges</label>
-          <label><input name="prefer" value="open-source-community" type="checkbox" class="input-checkbox">Open Source Community</label>
-          <label><input name="prefer" value="gitter-help-rooms" type="checkbox" class="input-checkbox">Gitter help rooms</label>
-          <label><input name="prefer" value="videos" type="checkbox" class="input-checkbox">Videos</label>
-          <label><input name="prefer" value="city-meetups" type="checkbox" class="input-checkbox">City Meetups</label>
-          <label><input name="prefer" value="wiki" type="checkbox" class="input-checkbox">Wiki</label>
-          <label><input name="prefer" value="forum" type="checkbox" class="input-checkbox">Forum</label>
-          <label><input name="prefer" value="additional-courses" type="checkbox" class="input-checkbox">Additional Courses</label>
+            <input
+              name="prefer"
+              value="back-end-projects"
+              type="checkbox"
+              class="input-checkbox"
+            />Back-end Projects</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="data-visualization"
+              type="checkbox"
+              class="input-checkbox"
+            />Data Visualization</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="challenges"
+              type="checkbox"
+              class="input-checkbox"
+            />Challenges</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="open-source-community"
+              type="checkbox"
+              class="input-checkbox"
+            />Open Source Community</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="gitter-help-rooms"
+              type="checkbox"
+              class="input-checkbox"
+            />Gitter help rooms</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="videos"
+              type="checkbox"
+              class="input-checkbox"
+            />Videos</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="city-meetups"
+              type="checkbox"
+              class="input-checkbox"
+            />City Meetups</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="wiki"
+              type="checkbox"
+              class="input-checkbox"
+            />Wiki</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="forum"
+              type="checkbox"
+              class="input-checkbox"
+            />Forum</label
+          >
+          <label
+            ><input
+              name="prefer"
+              value="additional-courses"
+              type="checkbox"
+              class="input-checkbox"
+            />Additional Courses</label
+          >
         </div>
 
         <div class="form-group">
           <p>Any comments or suggestions?</p>
-          <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..."></textarea>
+          <textarea
+            id="comments"
+            class="input-textarea"
+            name="comment"
+            placeholder="Enter your comment here..."
+          ></textarea>
         </div>
 
         <div class="form-group">
@@ -87,7 +220,5 @@
         </div>
       </form>
     </div>
-  
-
-</body>
+  </body>
 </html>
