changes in Underscore and nav link

--- a/jsdocumentation-freecodecamp-project/JsDocument.html
+++ b/jsdocumentation-freecodecamp-project/JsDocument.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="JsDocument.css" />
+    <link rel="stylesheet" href="sample.css" />
     <body>
       <nav id="navbar">
         <header>JS Documentation</header>
         <ul>
           <li>
-            <a class="na-link" href="#introduction">Introduction</a>
+            <a class="na-link" href="#Introduction">Introduction</a>
           </li>
           <li>
-            <a class="na-link" href="#What you should know"
+            <a class="na-link" href="#What_you_should_know"
               >What you should know</a
             >
           </li>
           <li>
-            <a class="na-link" href="#Javascript and Java"
+            <a class="na-link" href="#JavaScript_and_Java"
               >Javascript and Java</a
             >
           </li>
           <li>
-            <a class="na-link" href="#Hello world">Hello world</a>
+            <a class="na-link" href="#Hello_world">Hello world</a>
           </li>
           <li>
             <a class="na-link" href="#Variables">Variables</a>
           </li>
           <li>
-            <a class="na-link" href="#Declaring variables"
+            <a class="na-link" href="#Declaring_variables"
               >Declaring variables</a
             >
           </li>
           <li>
-            <a class="na-link" href="#Variable scope">Variable scope</a>
+            <a class="na-link" href="#Variable_scope">Variable scope</a>
           </li>
           <li>
-            <a class="na-link" href="#Global variables">Global variables</a>
+            <a class="na-link" href="#Global_variables">Global variables</a>
           </li>
           <li>
             <a class="na-link" href="#Constant">Constant</a>
           </li>
           <li>
-            <a class="na-link" href="#Data types">JData types</a>
+            <a class="na-link" href="#Data_types">Data types</a>
           </li>
           <li>
-            <a class="na-link" href="#if...else statement"
+            <a class="na-link" href="#if...else_statement"
               >if...else statement</a
             >
           </li>
           <li>
-            <a class="na-link" href="#while statement">while statement</a>
+            <a class="na-link" href="#while_statement">while statement</a>
           </li>
           <li>
-            <a class="na-link" href="#Function declarations"
+            <a class="na-link" href="#Function_declarations"
               >Function declarations</a
             >
           </li>
@@ -328,7 +328,7 @@
             </p>
           </article>
         </section>
-        <section class="main-section" id="if...else statement">
+        <section class="main-section" id="if...else_statement">
           <header>if...else statement</header>
           <article>
             <p>
@@ -381,7 +381,7 @@
             <code>if ((x = y)) { /* statements here */ }</code>
           </article>
         </section>
-        <section class="main-section" id="while statement">
+        <section class="main-section" id="while_statement">
           <header>while statement</header>
           <article>
             <p>
@@ -424,12 +424,22 @@
             </p>
           </article>
         </section>
-        <section class="main-section" id="Function declarations">
+        <section class="main-section" id="Function_declarations">
           <header>Function declarations</header>
           <article></article>
         </section>
         <section class="main-section" id="Referance">
           <header>Referance</header>
+          <ul>
+            <li>
+              All the documentation in this page is taken from
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"
+                target="_blank"
+                >MDN</a
+              >
+            </li>
+          </ul>
         </section>
       </main>
     </body>
