--- a/jsdocumentation-freecodecamp-project/JsDocument.html
+++ b/jsdocumentation-freecodecamp-project/JsDocument.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="sample.css" />
+    <link rel="stylesheet" href="JsDocument.css" />
     <body>
       <nav id="navbar">
         <header>JS Documentation</header>
