fonts imports and format changes

--- a/product-freecodecamp-project/product.html
+++ b/product-freecodecamp-project/product.html
@@ -75,7 +75,7 @@
       <li>Lorem ipsum dolor.</li>
       <li>Lorem ipsum.</li>
     </ul>
-    <button class="btn">Submit</button>
+    <button class="btn">SELECT</button>
   </div>
   <div class="product" id="bass">
     <div class="level">BASS TROMBONE</div>
@@ -86,7 +86,7 @@
       <li>Lorem ipsum dolor.</li>
       <li>Lorem ipsum.</li>
     </ul>
-    <button class="btn">Submit</button>
+    <button class="btn">SELECT</button>
   </div>
 <div class="product" id="valve">
     <div class="level">VALVE TROMBONE</div>
@@ -97,7 +97,7 @@
       <li>Lorem ipsum dolor.</li>
       <li>Lorem ipsum.</li>
     </ul>
-    <button class="btn">Submit</button>
+    <button class="btn">SELECT</button>
   </div>  
 
 </section>
