--- a/Sample Template/new.html
+++ b/Sample Template/new.html
@@ -139,8 +139,8 @@
     <tbody>
     <td>
         <tr>
-        <p style="font-size: 30px; color: #152a6d; text-align: center">
-            <span><strong style="font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif;">HAPPY INDEPENDANCEDAY</strong></span>
+        <p style="font-size: 30px; color:#2b2d49; text-align: center">
+            <span><strong style="font-family: 'Lato', Tahoma, Verdana, Segoe, sans-serif;">HAPPY INDEPENDANCE DAY</strong></span>
         </p>
         </tr>
     </td>
