colors and spelling mistakes

--- a/Email-Temp/Pdf.html
+++ b/Email-Temp/Pdf.html
@@ -8,16 +8,19 @@
   </style>
 </head>
 <html>
-
 <body style="
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       font-family: Verdana;
-      background-color: cornsilk;
+     
     ">
-  <table style="width:1000px;    background-color: cornsilk; ">
+    <table width="1000px" style="background-color: #FFFAFAF6;">
+      <tbody>
+        <tr>
+          <td>
+  <table style="width:1000px;">
     <tr>
       <td>
 
@@ -46,17 +49,11 @@
         </div>
       </td>
     </tr>
-
-
-
-
-  </table>
-
-  <table>
+  <table style="padding: 10px 30px;">
     <tr>
       <td style="width:800px; margin: 30px;background-color: white;">
         <h1 style="color: #438545; text-align: center;font-weight: normal;">
-          The OneTouch <sup>&reg;</sup> Customer Care is here for you!
+          The OneTouch<sup>&reg;</sup> Customer Care is here for you!
         </h1>
         <div align="center">
           <img src="https://res.cloudinary.com/sampletemp/image/upload/v1657525798/UAE_Header_z9cg9d.png" style="
@@ -68,17 +65,17 @@
           <div style="
                       width: 860px;
                       height: auto;
-                      color: #474444;
+                      color: #555460;
                       padding: 50px;
                       font-size: 24px;
                       text-align: left;
                     ">
             <p style="font-size: 28px">
-              Our OneTeouch<sup>&reg;</sup>Customer Care team is here to
+              Our OneTouch<sup>&reg;</sup> Customer Care team is here to
               help you.
             </p>
             <p>
-              The OneTouch<sup>&reg;</sup>Team is vigilantly monitoring
+              The OneTouch<sup>&reg;</sup> Team is vigilantly monitoring
               the Coronavirus (COVID-19) outbreak, caring for our
               patients, their care teams, Our communities and employees.
               <strong>We do not anticipate any product supply disruption
@@ -94,7 +91,7 @@
               Emergencies like the COVID-19 can be even more challenging
               for people living with diabetes: Here is list of helpful
               precautions and tips from the
-              American Diabetes Association: <a style="color: #438545" href="link.com">Link</a>
+              American Diabetes Association: <a style="color: #89c36d" href="link.com">Link</a>
             </p>
             <p>
               <strong>DID YOU KNOW?</strong>
@@ -107,7 +104,7 @@
               <strong style="color: forestgreen">OneTouch Reveal<sup>&reg;</sup> mobile app</strong>
               you can share results and reports remotely with your
               circle of care including your healthcare providers. To
-              find out more about how the OneTouch<sup>&reg;</sup>app
+              find out more about how the OneTouch<sup>&reg;</sup> app
               can help you, <a style="color: forestgreen" href="clickhere.com">Click here</a>
             </p>
             <p style="display: flex">Download the app for free.</p>
@@ -189,7 +186,7 @@
                                       font-size: 24px;
                                       color: forestgreen;
                                       font-family: verdana, sans-serif; margin-left: 3rem;font-weight:600; margin-bottom: 5px;">
-                                      Get personal support from OneTouch <sup>&reg;</sup> Customer Care
+                                      Get personal support from OneTouch<sup>&reg;</sup> Customer Care
                                   </p>
                               </td>
                           </tr>
@@ -204,16 +201,17 @@
                                   <p style="
                                       font-size: 20px;
                                       font-family: verdana, sans-serif;
-                                      color: black; line-height: 1.2; margin-left: 3rem;">We're here for you. If you
-                                      would like support or have any questions about your OneTouch <sup>&reg;</sup> meter
-                                      or the OneTouch <sup>&reg;</sup> Reveal app, our experienced and understanding
+                                      color: #868792; line-height: 1.2; margin-left: 3rem;">We're here for you. If you
+                                      would like support or have any questions about your OneTouch<sup>&reg;</sup> meter
+                                      or the OneTouch<sup>&reg;</sup> Reveal app, our experienced and understanding
                                       Customer Care agents can help guide your way forward. Of course, you can also
-                                      contact us via <span><a href="" style=" text-decoration: none; color: forestgreen;
-      cursor: pointer;font-weight: 600;">email.</a></span></p>
+                                      contact us via <span><a href="" style=" text-decoration: none; color: #5aac53;
+                                      cursor: pointer;font-weight: 600;"
+                                      >email.</a></span></p>
                               </td>
                           </tr>
                       </table>
-                      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin-top: 10px;">
+                      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin-top: 10px;padding-bottom: 50px;">
                           <tr>
                               <td style="display: flex; margin-left: 10%;">
                                   <div align="center">
@@ -222,7 +220,7 @@
                                   <div align="left" style="margin-left: 20px;
                                   vertical-align: middle;
                                   margin-top: 15px;">
-                                      <p style="font-size: 20px;
+                                      <p style="color: #868792;font-size: 20px;
                                       font-family: verdana, sans-serif; margin: 0;">Email: </p>
                                       <a href="" style="font-size: 24px;
                                       font-family: verdana, sans-serif;
@@ -239,67 +237,36 @@
                                   <div align="center">
                                       <img src="https://res.cloudinary.com/dfwewh5si/image/upload/v1657603161/icon-phone-call_lihpcx.jpg" alt="image" style="width: 100px;">
                                   </div>
-                                  <div align="left" style="font-size: 20px;
+                                  <div align="left" style="color: #868792;font-size: 20px;
                                       font-family: verdana, sans-serif;margin-left: 20px; margin-top: 18px;">
                                       <p class="number">Phone:</p>
-                                      <p class="number">Bahrain: <span style="color: #438545;">+973 17 731415</span></p>
-                                      <p class="number">Egypt: <span style="color: #438545;">+02 22690262</span> Ext 142
+                                      <p class="number">Bahrain: <span style="color: #89c36d;">+973 17 731415</span></p>
+                                      <p class="number">Egypt: <span style="color: #89c36d;">+02 22690262</span> Ext 142
                                       </p>
-                                      <p class="number">Jordan: <span style="color: #438545;">+96 265885192-3</span> Ext
+                                      <p class="number">Jordan: <span style="color: #89c36d;">+96 265885192-3</span> Ext
                                           201
                                       </p>
-                                      <p class="number">Kuwait:<span style="color: #438545;">+965 22276888</span> Ext 220
+                                      <p class="number">Kuwait:<span style="color: #89c36d;">+965 22276888</span> Ext 220
                                       </p>
-                                      <p class="number">Lebanon:<span style="color: #438545;">+961 1 512083</span></p>
-                                      <p class="number">Omen:<span style="color: #438545;">+968-248 14501</span></p>
-                                      <p class="number">Qatar:<span style="color: #438545;">+974 44027400</span> ext 7580
+                                      <p class="number">Lebanon:<span style="color: #89c36d;">+961 1 512083</span></p>
+                                      <p class="number">Omen:<span style="color: #89c36d;">+968-248 14501</span></p>
+                                      <p class="number">Qatar:<span style="color: #89c36d;">+974 44027400</span> ext 7580
                                       </p>
-                                      <p class="number">Saudi Arabia:<span style="color: #438545">800 429
+                                      <p class="number">Saudi Arabia:<span style="color: #89c36d">800 429
                                               0009</span>(Toll Free)</p>
                                   </div>
                               </td>
                           </tr>
                           <tr>
-                              <td style="text-align: left;font-size: 20px;
+                              <td style=" color: #8b8891;text-align: left;font-size: 20px;
                                   font-family: verdana, sans-serif; line-height: 2;">
-                                  <p style="margin-left: 10%;">Yours Sincerely,<br>
-                                      The OneTouch <sup>&reg;</sup> Team</p>
+                                  <p style="margin-left: 12%;
+                                  padding-top: 40px;">Yours Sincerely,<br>
+                                      The OneTouch<sup>&reg;</sup> Team</p>
                               </td>
                           </tr>
                       </table>
-                      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color: cornsilk;">
-                          <tr>
-                              <td ">
-  <p style=" margin-left: 2rem; font-size: 20px; font-family: verdana, sans-serif; line-height: 1.5;">
-                                  Apple and the Apple logo are trademarks of Apple Ins., registered in the US and other
-                                  countries. <br>App store is a service mark of Apple Ins.<br> Google play and Google play
-                                  logo are trademarks of Google LLC.
-                                  </p>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td>
-                                  <p style="margin-left: 2rem;
-                                      font-size: 20px;line-height: 1.5;
-                                     ">DO NOT REPLY TO THIS EMAIL.<br>
-                                      This email address does not accept replies.<br>
-                                      <a href="" style="text-decoration: none;
-                                      color: forestgreen;">Unsubscribe</a> to opt out of our email<br>
-                                      Communication from LifeScan.
-                                  </p>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td>
-                                  <p style="font-size: 20px;
-                                      margin-left: 2rem; line-height: 1.5;"><strong style="font-size: 20px;
-                                      ">This email was sent by</strong><br>LifeScan, Ins
-                                      <br>
-                                      20 Valley Stream Pkwy.<br> Malvern, PA 19355, USA<br><br>&copy;2020 LifeScan IP
-                                      Holdings, LLC GL-GEN 2000005</p>
-                              </td>
-                          </tr>
-                      </table>
+                     
                   </td>
               </tr>
           </tbody>
@@ -308,6 +275,44 @@
   </td>
   </tr>
   </table>
+  <table border="0" cellpadding="0" cellspacing="0" style="padding: 60px;">
+    <tr>
+        <td ">
+<p style="color: #8b8891; margin-left: 2rem; font-size: 20px; font-family: verdana, sans-serif; line-height: 1.5;">
+            Apple and the Apple logo are trademarks of Apple Ins., registered in the US and other
+            countries. <br>App store is a service mark of Apple Ins.<br> Google play and Google play
+            logo are trademarks of Google LLC.
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <p style="color: #8b8891;margin-left: 2rem;
+                font-size: 20px;line-height: 1.5;
+               ">DO NOT REPLY TO THIS EMAIL.<br>
+                This email address does not accept replies.<br>
+                <a href="" style="text-decoration: none;
+                color: #71aa63;">Unsubscribe</a> to opt out of our email<br>
+                Communication from LifeScan.
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <p style="color: #8b8891;font-size: 20px;
+                margin-left: 2rem; line-height: 1.5;"><strong style="font-size: 20px;
+                ">This email was sent by</strong><br>LifeScan, Ins
+                <br>
+                20 Valley Stream Pkwy.<br> Malvern, PA 19355, USA<br><br>&copy;2020 LifeScan IP
+                Holdings, LLC GL-GEN 2000005</p>
+        </td>
+    </tr>
+</table>
+</table>
+</td>
+</tr>
+</tbody>
+</table>
 </body>
 
 </html>
