--- a/fyxt-components/Fyxt.html
+++ b/fyxt-components/Fyxt.html
@@ -10,22 +10,15 @@
       <button
         style="
           font-weight: bold;
-          border: 1px solid #DADFE6;
-          background-color: #EFF1F4;
+          border: 1px solid #dadfe6;
+          background-color: #eff1f4;
           color: #3a4763;
           padding: 5px 15px 5px 15px;
           border-radius: 18px;
-          "
-         
+        "
       >
         Cameron Soltani
-        <spanc
-          style="
-            padding-left: 10px;          
-            color: #30495ca3
-          "
-          >&#10005;</span
-        >
+        <span style="padding-left: 10px; color: #30495ca3">&#10005;</span>
       </button>
     </head>
   </body>
