--- a/tribute-freecodecamp-project/norman.html
+++ b/tribute-freecodecamp-project/norman.html
@@ -3,6 +3,68 @@
   <head>
     <link rel="stylesheet" href="norman1.css" />
   </head>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Helvetica Neue", Arial, sans-serif;
+    }
+
+    figcaption {
+      text-align: center;
+    }
+    main {
+      margin: 30px 8px;
+      padding: 15px;
+      border-radius: 5px;
+      background: #eee;
+    }
+    h1,
+    p,
+    h3 {
+      text-align: center;
+    }
+    p {
+      display: block;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+    }
+    blockquote {
+      font-style: italic;
+      max-width: 545px;
+      margin: 0 auto 50px auto;
+      text-align: left;
+    }
+
+    ul {
+      max-width: 550px;
+      margin: 0 auto 50px auto;
+      text-align: left;
+      line-height: 1.6;
+    }
+
+    li {
+      margin: 16px 0;
+    }
+
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+    #headline {
+      margin: 50px 0;
+      text-align: center;
+    }
+    img {
+      max-width: 100%;
+      display: block;
+      height: auto;
+      margin: 0 auto;
+    }
+  </style>
   <main id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
     <p>The man who saved a billion lives</p>
